Fix reflow on continue button loading on mobile

--- a/css/styles_override.css
+++ b/css/styles_override.css
@@ -138,3 +138,11 @@ input[type=checkbox]:checked ~ .spoiler {
         color: #ffffff;
     }
 }
+
+.continue-hidden {
+    visibility: hidden;
+}
+
+.continue-shown {
+    visibility: visible;
+}
